[package]
name = "flock"
description = "<add something here>"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/flock"
readme = "readme.md"
keywords = ["link-aggregator", "booru"]
categories = ["Web programming"]
edition = "2021"
license = "AGPL-3.0"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"

[dependencies]
tracing-log = "0.1"
anyhow = "1"
futures = "0.3"
config = "0.13"
serde = "1"
httpdate = "1"
ulid = "1"
regex = "1"
rmp-serde = "1"
http-body = "0.4"
pcg_rand = "0.13"
rand = "0.8"

[dependencies.axum]
version = "0.6"
features = ["form", "http1", "http2", "tower-log", "headers"]

[dependencies.askama]
version = "0.11"
git = "https://github.com/djc/askama.git"
features = ["with-axum"]

[dependencies.askama_axum]
version = "0.1"
git = "https://github.com/djc/askama.git"

[dependencies."instant-glicko-2"]
version = "0.1"
git = "https://github.com/gpluscb/instant-glicko-2"
features = ["serde"]

[dependencies.tower]
version = "0.4"
features = ["full"]

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]

[dependencies.tracing]
version = "0.1"
features = ["release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["parking_lot", "env-filter"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "offline"]
