[package]
name = "flock"
description = "<add something here>"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/flock"
readme = "readme.md"
keywords = ["link-aggregator", "booru"]
categories = ["Web programming"]
edition = "2021"
license = "AGPL-3.0"

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"

[profile.release-profile]
inherits = "release-lto"
strip = "none"
debug = true

[dependencies]
tracing-log = "0.1"
anyhow = "1"
futures = "0.3"
config = "0.13"
serde = "1"
httpdate = "1"
ulid = "1"
regex = "1"
rmp-serde = "1"
http-body = "0.4"
pcg_rand = "0.13"
rand = "0.8"
parking_lot = "0.12"
urlencoding = "2"
rss = "2"
humantime = "2"
humantime-serde = "1"

[dependencies.axum]
version = "0.6"
features = ["http2", "headers", "multipart"]

[dependencies.askama]
version = "0.12"
features = ["with-axum"]

[dependencies.askama_axum]
version = "0.3"

[dependencies."instant-glicko-2"]
version = "0.1"
git = "https://github.com/gpluscb/instant-glicko-2"
features = ["serde"]

[dependencies.tower]
version = "0.4"
features = ["full"]

[dependencies.tower-http]
version = "0.4"
features = ["set-header", "trace"]

[dependencies.tokio]
version = "1"
features = ["full", "parking_lot"]

[dependencies.tracing]
version = "0.1"
features = ["release_max_level_info"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["parking_lot", "env-filter"]

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio-rustls", "sqlite"]

[dependencies.coz]
version = "0.1"
optional = true

[dependencies.dhat]
version = "0.3"
optional = true

[dependencies.mimalloc]
version = "0.1"
# remove if we become less confident about security
default-features = false
